--- a/src/Components/Pages/Blog/Blog.module.css
+++ b/src/Components/Pages/Blog/Blog.module.css
@@ -16,9 +16,18 @@
 .bg{
     position: absolute;
     height: 80rem;
-    width: 98vw;
+    width: 100vw;
     filter: blur(8px);
     -webkit-filter: blur(8px);
     background-size: cover;
     background-image: url("https://w0.peakpx.com/wallpaper/165/747/HD-wallpaper-beautiful-landscape-digital-art.jpg");
+}
+@media (max-width:1000px){
+    .container img{
+        margin: 3rem;
+        width: 23rem;
+        height: 30rem;
+        box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+        border-radius: 10px;
+    }
 }
