--- a/src/Components/Pages/Blog/Blog.module.css
+++ b/src/Components/Pages/Blog/Blog.module.css
@@ -31,3 +31,21 @@
         border-radius: 10px;
     }
 }
+@media (max-width:700px){
+    .container img{
+        margin: 3rem;
+        width: 18rem;
+        height: 10rem;
+        box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+        border-radius: 10px;
+    }
+    .bg{
+        position: absolute;
+        height: 198rem;
+        width: 100vw;
+        filter: blur(8px);
+        -webkit-filter: blur(8px);
+        background-size: cover;
+        background-image: url("https://w0.peakpx.com/wallpaper/165/747/HD-wallpaper-beautiful-landscape-digital-art.jpg");
+    }
+}
