--- a/src/Registartion/Registartion.module.css
+++ b/src/Registartion/Registartion.module.css
@@ -4,7 +4,7 @@
     height: 100vh;
     flex-direction: column;
     background-size: cover;
-    background-image: url("https://w0.peakpx.com/wallpaper/165/747/HD-wallpaper-beautiful-landscape-digital-art.jpg");
+    background-image: url("https://i.pinimg.com/originals/d7/33/34/d733345e4f11231904e7634a04439e21.gif");
 }
 .form{
     margin-top: 5rem;
