--- a/src/Components/NavigationBar/NavigationBar.module.css
+++ b/src/Components/NavigationBar/NavigationBar.module.css
@@ -16,8 +16,16 @@ color: red;
     text-decoration: none;
     color: white;
 }
+.opt:hover{
+color: blue;
+}
 .dropdown{
     display: none;
+}
+.active{
+    color: orangered;
+    text-decoration: none;
+    background-color: red;
 }
 @media (max-width:700px){
     .opt{
