--- a/src/Components/Pages/HomePage/HomePage.module.css
+++ b/src/Components/Pages/HomePage/HomePage.module.css
@@ -7,6 +7,7 @@
 }
 .container{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 40rem;
@@ -24,6 +25,18 @@
     animation-duration: 1s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+    }
+    .getstart{
+        border-radius: 15px;
+        height: 3rem;
+        width: 10rem;
+        font-size: 20px;
+        font-weight: 700;
+        border: none;
+        box-shadow: 1px 1px 7px 1px white;
+    }
+    .getstart:hover{
+        background-color: aqua;
     }
     @-webkit-keyframes fadeInUp {
     0% {
