--- a/src/Components/Pages/Photo/Photo.module.css
+++ b/src/Components/Pages/Photo/Photo.module.css
@@ -2,4 +2,43 @@
     background-color: black;
     height: 100vh;
     color: white;
+    display:flex ;
+    flex-direction: column;
+    align-items: center;
+}
+.image{
+    height: 29.5rem;
+   width: 39.8rem;
+}
+.imgContainer{
+    border: 2px white  dotted;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40rem;
+    height: 33rem;
+    margin-top: 1rem;
+}
+.nav{
+    width: 100vw;
+}
+.icon{
+    height: 2rem;
+}
+.container{
+    border: 2px red solid;
+    align-items: center;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: space-around;
+}
+.form{
+    border: 2px green solid;
+    display: flex;
+    flex-direction: column;
+    width: 40rem;
+    height: 33rem;
+    padding: 1rem;
+    row-gap: 1rem;
 }
