--- a/src/Components/Pages/Blog/Blog.module.css
+++ b/src/Components/Pages/Blog/Blog.module.css
@@ -3,15 +3,39 @@
     margin-top: 6rem;
      cursor: pointer;
 }
-.container img{
+.img{
     margin: 3rem;
     width: 15rem;
     height: 20rem;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     border-radius: 10px;
 }
-.container img:hover{
+.img2{
+    width: 80vw;
+    height: 80vh;
+}
+.box{
+    width: 100vw;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px red solid; */
+    margin-left: -2rem;
+}
+.img:hover{
     transform: scale(1.1);
+}
+.buttons{
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+    margin-right: 6.5rem;
+}
+.buttons button{
+    color: white;
+    background-color: transparent;
+    border: none;
 }
 .bg{
     position: absolute;
