--- a/src/Components/Pages/HomePage/HomePage.module.css
+++ b/src/Components/Pages/HomePage/HomePage.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .container{
     display: flex;
     flex-direction: column;
@@ -85,7 +86,14 @@
         .getstart{
             font-size: small;
             padding: 0;
-            height: 1rem;
+            height: 2rem;
             width: 6rem;
+        }
+        .video{
+           width: 30rem;
+           height: 30rem;
+           display: flex;
+           justify-content: center;
+           align-items: center;
         }
     }
