--- a/src/Components/Pages/HomePage/HomePage.module.css
+++ b/src/Components/Pages/HomePage/HomePage.module.css
@@ -75,8 +75,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            width: 15rem;
-            /* border: 1px red solid; */
+            width: 25rem;
             color: white;
            font-size: small;
            font-family: 'Castoro Titling', cursive;
@@ -90,10 +89,11 @@
             width: 6rem;
         }
         .video{
-           width: 30rem;
-           height: 30rem;
+           width: 40rem;
+           height: 40rem;
            display: flex;
            justify-content: center;
            align-items: center;
+           margin-top: -10rem;
         }
     }
