--- a/src/Components/Pages/HomePage/HomePage.module.css
+++ b/src/Components/Pages/HomePage/HomePage.module.css
@@ -68,7 +68,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            background-color: black;
+            width: 96vw;
         }
         .container{
             display: flex;
