--- a/src/Login/Login.module.css
+++ b/src/Login/Login.module.css
@@ -1,6 +1,7 @@
 .main{
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 100vh;
     flex-direction: column;
     background-size: cover;
